force-app/main/default/objects/Locking_Record__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>Resolved Lock Time</label>
    <type>DateTime</type>
</CustomField>