force-app/main/default/objects/Locking_Record__c/fields/Locked_Duration__c.field-meta.xml
<CustomField>
    <fullName>Locked_Duration__c</fullName>
    <description>Locked duration (in Hours) is the difference between now and the record&#39;s start lock time if the record has not been resolved; otherwise, Locked duration is the difference between when the record was resolved and record&#39;s start lock time.</description>
    <formula>IF(ISNULL(End_Time__c), (NOW() - Start_Time__c), (End_Time__c - Start_Time__c)) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Locked duration (in Hours) is the difference between now and the record&#39;s start lock time if the record has not been resolved; otherwise, Locked duration is the difference between when the record was resolved and record&#39;s start lock time.</inlineHelpText>
    <label>Locked Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>