force-app/main/default/objects/Locking_Record__c/fields/Response_Duration__c.field-meta.xml
<CustomField>
    <fullName>Response_Duration__c</fullName>
    <description>Response duration (in Hours) is the difference between when the record was resolved and when the record was created if the record has been resolved; otherwise, Response duration is removed.</description>
    <formula>IF(ISNULL(End_Time__c), null, (End_Time__c - CreatedDate)) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Response duration (in Hours) is the difference between when the record was resolved and when the record was created if the record has been resolved; otherwise, Response duration is removed.</inlineHelpText>
    <label>Response Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>