force-app/main/default/objects/Locking_Record__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Locking Records</relationshipLabel>
    <relationshipName>Locking_Records</relationshipName>
    <type>Lookup</type>
</CustomField>