force-app/main/default/objects/Locking_Record__c/validationRules/StartTimeLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>StartTimeLimit</fullName>
    <active>true</active>
    <description>Start time cannot be set to more than a week into the future.</description>
    <errorConditionFormula>Start_Time__c  &gt; NOW() + 7</errorConditionFormula>
    <errorDisplayField>Start_Time__c</errorDisplayField>
    <errorMessage>Lock start time set for more than 7 days in the future.</errorMessage>
</ValidationRule>